[FIX] JSON파일에 링크 추가

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": "https://all-it-chat.netlify.app/",
   "eslintConfig": {
     "extends": [
       "react-app",
